--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@
 
 .elempart1 h2{
    padding: 5px 10px;
-   font-size: 30px;
+   font-size: 20px;
    background-color: #BAFF68;
    font-weight: 500;
    font-family: china;
@@ -227,7 +227,7 @@
 
 .elempart2 img{
    height:100%;
-   
+   width:100%;
 }
 
 .black{
